Fix missing background image for intro on CAPP pages (#1714)

--- a/source/stylesheets/pages/_capp-lms-new.scss
+++ b/source/stylesheets/pages/_capp-lms-new.scss
@@ -170,7 +170,7 @@ body:not(.en).capp-lms {
   }
 
   .capp-introduction {
-    $background-image: "../images/capp-12-intro-bg.svg";
+    $background-image: "../images/moods/home.svg";
 
     background-color: $capp-dark-blue;
     background-image: url($background-image);
